Added the input file to the command line in the project properties.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,19 @@
 /WordCounter/Debug/stdafx.obj
 /WordCounter/Debug/SheetRow.obj
 /.vs/WordCounter/v15/ipch
+/WordCounter/x64/Debug/WordCounter.pch
+/WordCounter/x64/Debug/WordCounter.obj
+/WordCounter/x64/Debug/WordCounter.log
+/WordCounter/x64/Debug/vc141.pdb
+/WordCounter/x64/Debug/vc141.idb
+/WordCounter/x64/Debug/stdafx.obj
+/WordCounter/x64/Debug/SheetRow.obj
+/WordCounter/x64/Debug/WordCounter.tlog/WordCounter.lastbuildstate
+/WordCounter/x64/Debug/WordCounter.tlog/link.write.1.tlog
+/WordCounter/x64/Debug/WordCounter.tlog/link.read.1.tlog
+/WordCounter/x64/Debug/WordCounter.tlog/link.command.1.tlog
+/WordCounter/x64/Debug/WordCounter.tlog/CL.write.1.tlog
+/WordCounter/x64/Debug/WordCounter.tlog/CL.read.1.tlog
+/WordCounter/x64/Debug/WordCounter.tlog/CL.command.1.tlog
+/x64/Debug
+/.vs/WordCounter/v15
